src/objects/CCF_Request_Header__c.object
<CustomObject>
    <fields>
        <fullName>Supplier_Contact_Name__c</fullName>
        <label>Supplier Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Supplier_Name__c</field>
                <operation>equals</operation>
                <valueField>Supplier_Contact__c.Supplier_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Contact__c</referenceTo>
        <relationshipLabel>CCF Request</relationshipLabel>
        <relationshipName>CCF_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Digital_Signature_Ready__c</fullName>
        <label>Supplier Digital Signature Ready</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XSupplier Name</label>
        <referenceTo>CCF_Request_Supplier__c</referenceTo>
        <relationshipLabel>CCF Request</relationshipLabel>
        <relationshipName>CCF_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Risk_Rating__c</fullName>
        <label>Supplier Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCF_Supplier_Risk_Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_USQS_Complaint__c</fullName>
        <label>Supplier USQS Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_s_Contract_Number__c</fullName>
        <label>Supplier&apos;s Contract Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Team_s_Name__c</fullName>
        <label>Team&apos;s Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Network__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Markets – Indonesia</fullName>
                </value>
                <value>
                    <fullName>Markets - Philippines &amp; Vietnam</fullName>
                </value>
                <value>
                    <fullName>Markets - Thailand, Malaysia, Singapore, Myanmar &amp; ANZ</fullName>
                </value>
                <value>
                    <fullName>Markets - HPC South Asia, India, Pakistan &amp; Nepal</fullName>
                </value>
                <value>
                    <fullName>Markets - F&amp;R South Asia, Bangladesh &amp; Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>Markets - North Asia</fullName>
                </value>
                <value>
                    <fullName>Markets – NAME</fullName>
                </value>
                <value>
                    <fullName>Markets – TUII</fullName>
                </value>
                <value>
                    <fullName>Markets – RUB</fullName>
                </value>
                <value>
                    <fullName>Markets - South Africa</fullName>
                </value>
                <value>
                    <fullName>Markets - East Africa</fullName>
                </value>
                <value>
                    <fullName>Markets - West Africa</fullName>
                </value>
                <value>
                    <fullName>Tea Operations – COE</fullName>
                </value>
                <value>
                    <fullName>Tea Africa</fullName>
                </value>
                <value>
                    <fullName>Markets - North America</fullName>
                </value>
                <value>
                    <fullName>Markets - Logistics NA &amp; Logistics Global Capabilities</fullName>
                </value>
                <value>
                    <fullName>Markets – Brazil</fullName>
                </value>
                <value>
                    <fullName>Markets – SOCO</fullName>
                </value>
                <value>
                    <fullName>Markets - Mexico &amp; Middle Americas</fullName>
                </value>
                <value>
                    <fullName>Markets - Logistics LATAM</fullName>
                </value>
                <value>
                    <fullName>Markets – LATAM</fullName>
                </value>
                <value>
                    <fullName>Markets - DACH, Italy &amp; Med</fullName>
                </value>
                <value>
                    <fullName>Markets - Benelux &amp; CEE</fullName>
                </value>
                <value>
                    <fullName>Caps, Closures, Plastic Assemblies and Resin Feedstocks</fullName>
                </value>
                <value>
                    <fullName>EU Flexibles, Decoration &amp; Other Global Feedstocks</fullName>
                </value>
                <value>
                    <fullName>Aerosol Packaging Components</fullName>
                </value>
                <value>
                    <fullName>Processed Ingredients</fullName>
                </value>
                <value>
                    <fullName>Farmed Ingredients</fullName>
                </value>
                <value>
                    <fullName>Liquid Oils</fullName>
                </value>
                <value>
                    <fullName>Tropical Oils</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPA_Number__c</fullName>
        <label>UPA Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_UPA_exist__c</fullName>
        <label>Valid UPA exist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CCF Request</label>
    <listViews>
        <fullName>CTC</fullName>
        <columns>NAME</columns>
        <columns>Master_Agreement_Request_Type__c</columns>
        <columns>Contract_Name__c</columns>
        <columns>Network__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCF_Request_Header__c.CTC_CCF</value>
        </filters>
        <label>All CTC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NDA</fullName>
        <columns>NAME</columns>
        <columns>Master_Agreement_Request_Type__c</columns>
        <columns>Contract_Name__c</columns>
        <columns>CTC_Type__c</columns>
        <columns>Network__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCF_Request_Header__c.NDA</value>
        </filters>
        <label>All NDA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>STC</fullName>
        <columns>NAME</columns>
        <columns>Master_Agreement_Request_Type__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>CTC_Type__c</columns>
        <columns>Network__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCF_Request_Header__c.STC</value>
        </filters>
        <label>All STC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UPA</fullName>
        <columns>NAME</columns>
        <columns>Master_Agreement_Request_Type__c</columns>
        <columns>Contract_Name__c</columns>
        <columns>CTC_Type__c</columns>
        <columns>Network__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCF_Request_Header__c.UPA</value>
        </filters>
        <label>All UPA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCF-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCF Request</pluralLabel>
    <recordTypes>
        <fullName>CAPEX_CTC</fullName>
        <active>true</active>
        <label>CAPEX CTC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAPEX_NDA</fullName>
        <active>true</active>
        <label>CAPEX NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAPEX_STC</fullName>
        <active>true</active>
        <label>CAPEX STC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAPEX_UPA</fullName>
        <active>true</active>
        <label>CAPEX UPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTC_CCF</fullName>
        <active>true</active>
        <description>Commercial Terms Contract</description>
        <label>CTC_CCF</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTC_CCF_Non_Integrated_Commodities</fullName>
        <active>true</active>
        <label>CTC CCF Non -Integrated Commodities</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTC_NDA</fullName>
        <active>true</active>
        <label>CTC NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTC_STC</fullName>
        <active>true</active>
        <label>CTC STC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTC_UPA</fullName>
        <active>true</active>
        <label>CTC UPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>MBS_CTC</fullName>
        <active>true</active>
        <label>MBS CTC</label>
    </recordTypes>
    <recordTypes>
        <fullName>MBS_NDA</fullName>
        <active>true</active>
        <label>MBS NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>MBS_STC</fullName>
        <active>true</active>
        <label>MBS STC</label>
    </recordTypes>
    <recordTypes>
        <fullName>MBS_UPA</fullName>
        <active>true</active>
        <label>MBS UPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>false</active>
        <description>A non-disclosure agreement (NDA) is a legal contract between involved parties through which the parties agree not to disclose information covered by the agreement.</description>
        <label>NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>STC</fullName>
        <active>false</active>
        <description>Special Terms Contract</description>
        <label>STC</label>
    </recordTypes>
    <recordTypes>
        <fullName>UPA</fullName>
        <active>false</active>
        <description>Unilever Purchasing Agreement</description>
        <label>UPA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>